--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="15">
-    <td><img src="images/Nice Pic.jpeg" alt="Aly profile picture" height="299" width="190"></td>
+    <td> <img src="Nice Pic.jpeg" alt="Profile Picture" height="300" width="190" > </td>
     <td>
       <h1>Aly El Biblawy</h1>
       <p>Biomedical Engineering Student at the University of Guelph </p>
